feat: add guard for API Key subscriptions in shared mode
see https://github.com/gravitee-io/issues/issues/7248